# fortipolicy

./: .gitignore  pyproject.toml
tests/: test_fortipolicy.py
